[gd_scene load_steps=2 format=3 uid="uid://defj732eq6gl3"]

[ext_resource type="Script" uid="uid://b11ubdots3tu6" path="res://scripts/地图房间.gd" id="1_6vhbd"]

[node name="MapRoom" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 100.0
script = ExtResource("1_6vhbd")

[node name="RoomButton" type="Button" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
focus_mode = 0
mouse_filter = 0

[node name="RoomContainer" type="VBoxContainer" parent="RoomButton"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="RoomIcon" type="TextureRect" parent="RoomButton/RoomContainer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = 70.0
offset_bottom = 65.0
expand_mode = 1
stretch_mode = 3

[node name="RoomLabel" type="Label" parent="RoomButton/RoomContainer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 70.0
offset_right = 75.0
offset_bottom = 95.0
horizontal_alignment = 1
vertical_alignment = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "房间"